--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     <nav class="unit unit-s-1 unit-m-1 unit-l-2-3">
       <ul class="list-group giga brand-family push-0 nav">
         <li class="list-group-item list-group-item-inline">
-          <a href="{{site.baseurl}}/">Home</a>
+          <a class="current" href="{{site.baseurl}}/">Home</a>
         </li>
         <li class="list-group-item list-group-item-inline">
           <a href="{{site.baseurl}}/dinos/">Dinosaurs</a>
