--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Dinos 'R' Us</title>
+  <title>{{page.title}} · Dinos 'R' Us</title>
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -33,7 +33,7 @@
           <a class="{% if page.url == '/' %}current{% endif %}" href="{{site.baseurl}}/">Home</a>
         </li>
         <li class="list-group-item list-group-item-inline">
-          <a class="{% if page.url == '/dinasours/' %}current{% endif %}"href="{{site.baseurl}}/dinos/">Dinosaurs</a>
+          <a class="{% if page.url contains 'dinos' %}current{% endif %}"href="{{site.baseurl}}/dinos/">Dinosaurs</a>
         </li>
         <li class="list-group-item list-group-item-inline">
           <a class="{% if page.url == '/about/' %}current{% endif %}" href="{{site.baseurl}}/about/">About</a>
