--- a/css/header.css
+++ b/css/header.css
@@ -36,6 +36,17 @@
     text-align: right;
   }
 
+.banner {
+  background: #9cc00a url("../images/banner.jpg") no-repeat center center;
+  background-size: cover;
+  padding: 5rem 1rem 1rem;
+  text-align: center;
+  
+}
+
+.banner h1{
+  color: #fff;
+}
 
 
 }
